@@ -1,7 +1,7 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 66d4daddd0163539f19e2cb783fc3bb9 *configure
-b94f8d6bc2cc309d13898d9a9b59913a *DESCRIPTION
-0251d34c1355154a4f16be9f88cd42c2 *inst/NEWS.Rd
+a2647c208a5981f5f0392bd3491c90ae *DESCRIPTION
+196eb2c63df2d9e5b7ece68cb98c237f *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
 6375b9e30533e0495b98f4b5b829706b *man/charToFact.Rd
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
@@ -10,28 +10,28 @@ d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
 6413194a5cd625c7d76e4998d102fb52 *man/iif.Rd
 578fe4903cc4f5d7bc5a6f346be1e9e9 *man/nif.Rd
 ef4ce6330a0f6a2ec63ccfd365729963 *man/psort.Rd
-d4128b3f90218c0efd0d4bbf0f84d6a5 *man/psum.Rd
+ea6c028bf11fde8418566df845199f9c *man/psum.Rd
 14e3add07190fd18d0161f4f0b0b5257 *man/setlevels.Rd
 a137f7855b41b074e2babaf8a1562551 *man/shareData.Rd
 54f91d543a10f8c9aef7082da2b86de7 *man/topn.Rd
 3c628c2a27764ec5df2b4980921c310f *man/vswitch.Rd
-640100c58f36cf06c14aacd7ff7a946a *NAMESPACE
-17d2131e35dcafcc8f0139af5089e067 *R/call.R
+13654de27e177dac90d3b1ebff9f6097 *NAMESPACE
+3d930780894a84c44d8f8019f35fa904 *R/call.R
 34ba4d931a5bd0ba120ddef7e5327313 *README.md
 4826023c3ffe528db5e2af5db2a84b5a *src/dup.c
 e86a1960c335e7d534a4683b52d8b70c *src/dupLen.c
 84dc17b4330566e5beb69626ad9d268e *src/fpos.c
 c362509861cd6835c1d8adbb0dce02b4 *src/iif.c
 25439ed497a6a64e7f6d40436fc873f7 *src/init.c
-86419b2935806df908a0ab7d0da6f346 *src/kit.h
+a462262c35bf7889dbd0a8dcdf3a8357 *src/kit.h
 a52426250b954a335b1121948e057ee7 *src/Makevars.in
 95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
 8e997b5d5d44af5cea7eafb48a4b9745 *src/nswitch.c
 e06a11a84ff7a031b398d4492a5026ff *src/psort.c
-5a0e400582268106f4e8b12eb98411a4 *src/psum.c
+bcf659599e883af2384c1d5244d705cd *src/psum.c
 bafdafd654269acd054525571dbe1b44 *src/share.c
 53711690f6c15f3f36edb4b9360043a4 *src/topn.c
 c0f3fe6fca4e8492277a0d5f87528ce5 *src/utils.c
 3476a1e2381bb86f68a72844ee61bc7b *src/vswitch.c
-9bf3f161008c89b8d026f871aa4df01c *tests/test_kit.R
-3db979cdb6f4ad2d0e87eb6794b9c49b *tests/test_kit.Rout.save
+664adaab0040df8653bdc55ca56abcae *tests/test_kit.R
+e18ca2573fa8919ec63a044bc70365ef *tests/test_kit.Rout.save
