@@ -1,5 +1,6 @@
 # Function calls
 charToFact  = function(x, decreasing=FALSE, addNA=TRUE, nThread=getOption("kit.nThread")) .Call(CcharToFactR, x, decreasing, nThread, NA, parent.frame(), addNA)
+clearData   = function(x, verbose=FALSE) .Call("CclearMappingObjectR", x, verbose)
 count       = function(x, value) .Call(CcountR, x, value)
 countNA     = function(x) .Call(CcountNAR, x)
 countOccur  = function(x) .Call(CcountOccurR, x)
@@ -11,6 +12,7 @@ nif         = function(..., default=NULL) .Call(CnifR, default, parent.frame(), 
 nswitch     = function(x, ..., default=NULL, nThread=getOption("kit.nThread"), checkEnc = TRUE) .Call(CnswitchR, x, default, nThread, checkEnc, list(...))
 pall        = function(..., na.rm=FALSE) .Call(CpallR, na.rm, if (...length() == 1L && is.list(..1)) ..1 else list(...))
 pany        = function(..., na.rm=FALSE) .Call(CpanyR, na.rm, if (...length() == 1L && is.list(..1)) ..1 else list(...))
+pcountNA    = function(...) .Call(CpcountNAR, if (...length() == 1L && is.list(..1)) ..1 else list(...))
 pmean       = function(..., na.rm=FALSE) .Call(CpmeanR, na.rm, if (...length() == 1L && is.list(..1)) ..1 else list(...))
 pprod       = function(..., na.rm=FALSE) .Call(CpprodR, na.rm, if (...length() == 1L && is.list(..1)) ..1 else list(...))
 psum        = function(..., na.rm=FALSE) .Call(CpsumR,  na.rm, if (...length() == 1L && is.list(..1)) ..1 else list(...))
@@ -25,7 +27,7 @@ vswitch     = function(x, values, outputs, default=NULL, nThread=getOption("kit.
 
 pcount      = function(..., value) {
   if(is.na(value[1])) {
-    .Call(CpcountNAR, value, if (...length() == 1L && is.list(..1)) ..1 else list(...))
+    .Call(CpcountNAR, if (...length() == 1L && is.list(..1)) ..1 else list(...))
   } else {
     .Call(CpcountR, value, if (...length() == 1L && is.list(..1)) ..1 else list(...))
   }
@@ -38,8 +40,6 @@ psort = function(x, decreasing = FALSE, na.last = NA, nThread=getOption("kit.nTh
   warning("Function 'psort' was only implemented for character vectors. Defaulting to base::sort.")
   sort(x, decreasing = decreasing, na.last = na.last,method = if(c.locale) "radix" else "quick")
 }
-
-clearData = function(x, verbose=FALSE) .Call("CclearMappingObjectR", x, verbose)
 
 shareData = function(data, map_name, verbose=FALSE) {
   conn = rawConnection(raw(0L), "w")
